사이트 틀 잡음

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,30 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  /* padding-left: 20px; */
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
+.black-nav {
+  background-color: black;
+  color: white;
+  width: 100%;
+  display: flex;
+  padding-left: 20px;
+}
+
+div {
+  box-sizing: border-box;
+}
+
+.list {
+  border-bottom: 1px solid grey;
+  padding-left: 20px;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
