--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@400;600;700&family=Inter:wght@400;600;700&display=swap');
 
 .App {
-  /* text-align: center; */
-  /* padding-left: 20px; */
+  background-color: rgb(252, 252, 252);
+}       
+
+.list img{
+  width: 100%;
+  /* height: 70%; */
+  object-fit:contain;
+  object-position: center;
 }
 
 .nav {
@@ -30,8 +36,9 @@
 .nav button:hover {
   cursor: pointer;
   background-color: aliceblue;
-  border: solid;
+  border: 2px solid;
   color: #1D1D1D;
+  transition: background-color 0.5s ease, color 0.3s ease;
 }
 
 .Banner {
@@ -40,10 +47,8 @@
   margin-right: 20%;
   width: auto;
   height: 50vh;
-}
-
-.button:hover{
-  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  border-radius: 15px;
 }
 
 .App-logo {
@@ -64,10 +69,43 @@ div {
 }
 
 .list {
+  border-radius: 7px;
   width: 30%;
   margin: 0;
-  border-bottom: 1px solid grey;
-  padding-left: 20px;
+  /* border-bottom: 1px solid grey; */
+  padding: 0 20px;
+  background-color: white;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+.list:hover {
+  background-color: rgb(248, 248, 248);
+  /* color: white; */
+
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.social_function {
+  margin-bottom: 16px;
+  /* position: absolute; */
+  float: right;
+  /* transform: translateY(-5px);  */
+}
+
+.social_function:hover {
+  cursor: pointer;
+}
+
+.footer {
+  background-color: #282c34; 
+  color: white; 
+  text-align: center; 
+  padding: 20px; 
+  position: absolute;
+  bottom: -100vh;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 
