--- a/src/App.css
+++ b/src/App.css
@@ -69,21 +69,22 @@ div {
 }
 
 .list {
-  border-radius: 7px;
+  border-radius: 12px;
   width: 30%;
   margin: 0;
   /* border-bottom: 1px solid grey; */
   padding: 0 20px;
   background-color: white;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  transition: background-color 0.5s ease, color 0.5s ease;
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
 .list:hover {
-  background-color: rgb(248, 248, 248);
+  /* background-color: rgb(248, 248, 248); */
   /* color: white; */
-
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  transform: translateY(-5px);
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  
 }
 
 .social_function {
@@ -106,6 +107,30 @@ div {
   bottom: -100vh;
   width: 100%;
   box-sizing: border-box;
+}
+
+.more {
+  margin: 20% 0;
+  text-align: center;
+}
+
+.more h1 {
+  font-size: 42px;
+  font-weight: 350;
+  color: #4c4c4c;
+}
+
+.more button {
+  margin-top: 10px;
+  font-size: 24px;
+  width: 300px;
+  height: 60px;
+  border-radius: 30px;
+  cursor: pointer;
+  background-color: #363636;
+  color: white;
+  font-weight:bold;
+  margin-bottom: 500px;
 }
 
 
