--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@400;600;700&family=Inter:wght@400;600;700&display=swap');
 
+
+
 .App {
   background-color: rgb(252, 252, 252);
-}       
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content {
+  flex: 1; 
+}
 
 .list img{
   width: 100%;
-  /* height: 70%; */
-  object-fit:contain;
+  object-fit: contain;
   object-position: center;
+  cursor: pointer;
 }
 
 .nav {
   font-family: 'Source Serif Pro', serif;
   color: #525252;
-  width: 100%;
+  width: 80%;
   display: flex;
-  justify-content: space-between;
-  padding: 0 20%;
+  justify-content: space-between; 
+  padding: 0 10%; 
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 3px 5px;
 }
 
 .nav button {
@@ -31,6 +41,7 @@
   height: 30px;
   margin: 25px 5px;
   border-radius: 30px;
+  transition: background-color 0.5s ease, color 0.3s ease;
 }
 
 .nav button:hover {
@@ -43,6 +54,7 @@
 
 .Banner {
   background-color: #1D1D1D;
+  margin-top: 50px;
   margin-left: 20%;
   margin-right: 20%;
   width: auto;
@@ -51,47 +63,35 @@
   border-radius: 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-
-div {
-  box-sizing: border-box;
-}
-
 .lists-container {
   display: flex;
   justify-content: space-between;
-  width: 60%;
-  margin: 100px 20%;
+  width: 60%;  
+  margin: 50px auto;  
 }
 
 .list {
   border-radius: 12px;
   width: 30%;
-  margin: 0;
-  /* border-bottom: 1px solid grey; */
-  padding: 0 20px;
+  margin: 0 20px; 
+  padding: 20px;  
   background-color: white;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
 .list:hover {
-  /* background-color: rgb(248, 248, 248); */
-  /* color: white; */
   transform: translateY(-5px);
   box-shadow: rgba(0, 0, 0, 0.2) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  
+}
+
+.list h4{
+  margin: 5px;
 }
 
 .social_function {
   margin-bottom: 16px;
-  /* position: absolute; */
   float: right;
-  /* transform: translateY(-5px);  */
 }
 
 .social_function:hover {
@@ -103,10 +103,11 @@ div {
   color: white; 
   text-align: center; 
   padding: 20px; 
-  position: absolute;
-  bottom: -100vh;
   width: 100%;
+  height: 150px;
   box-sizing: border-box;
+  margin-top: auto;  
+  
 }
 
 .more {
@@ -129,10 +130,19 @@ div {
   cursor: pointer;
   background-color: #363636;
   color: white;
-  font-weight:bold;
-  margin-bottom: 500px;
+  font-weight: bold;
+  margin-bottom: 200px;
+  border: none;
+  transition: background-color 0.5s ease, color 0.3s ease;
 }
 
+.more button:hover {
+  cursor: pointer;
+  background-color: rgb(250, 250, 250);
+  border: 2px solid;
+  color: #1D1D1D;
+  transition: background-color 0.5s ease, color 0.3s ease;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
