--- a/src/App.css
+++ b/src/App.css
@@ -59,10 +59,11 @@
   margin-right: 20%;
   width: auto;
   height: 50vh;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 20px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   border-radius: 15px;
   position: relative;
   overflow: hidden;
+  z-index: 100;
 }
 
 .slider {
@@ -86,10 +87,9 @@
 
 .slider-image {
   width: 100%;
-  height: 100%; /* 슬라이드 컨테이너의 전체 높이를 채우도록 설정 */
-  object-fit: cover; /* 이미지가 컨테이너를 채우면서 비율을 유지하도록 설정 */
+  height: 100%; 
+  object-fit: cover; 
   border-radius: 15px;
-  bottom: 100px;
 }
 
 .controls {
@@ -99,14 +99,16 @@
   display: flex;
   justify-content: space-between;
   transform: translateY(-50%);
+  font-family: 'Inter', sans-serif;
 }
 
 .controls button {
   background: none;
   border: none;
-  color: white;
-  font-size: 2rem;
+  color: rgba(255, 255, 255, 0.81);
+  font-size: 3rem;
   cursor: pointer;
+  font-family: 'Inter', sans-serif;
 }
 
 .dots {
@@ -146,13 +148,13 @@
   margin: 0 20px; 
   padding: 20px;  
   background-color: white;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  box-shadow: rgba(113, 149, 185, 0.2) 0px 8px 24px;
   transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
 .list:hover {
   transform: translateY(-5px);
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  box-shadow: rgba(50, 50, 50, 0.045) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .list h4{
@@ -242,4 +244,25 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.dialog-box {
+  position: absolute;
+  top: 100px; /* 버튼 아래에 위치시키기 위해 조정 */
+  right: 6.5%;
+  background-color: #f0f0f0;
+  padding: 20px; /* 더 넓은 패딩으로 대화 박스를 크게 만듭니다 */
+  border-radius: 15px; /* 경계선 라운딩을 더 부드럽게 만듭니다 */
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3); /* 그림자를 더 크게 만듭니다 */
+  z-index: 1000; /* 다른 요소들 위에 표시되도록 설정 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dialog-image {
+  width: 250px; /* 이미지의 너비를 더 크게 설정 */
+  height: auto;
+  border-radius: 15px; /* 이미지 경계선 라운딩 */
 }
